<resources>
    <string name="app_name">AdoptaTuMascota</string>
    <string name="ini_lbl_mensaje">Iniciando</string>
    <string name="login_txt_usuario">usuario@dominio.com</string>
    <string name="login_txt_contrasenia">contraseña</string>
    <string name="login_btn_ingresar">Ingresar</string>
    <string name="login_lbl_registrate">Regístrate</string>
    <string name="button">Button</string>
    <string name="reg_btn_atras">Atras</string>
    <string name="reg_btn_registrar">Registro</string>
    <string name="Términos_Condiciones">Términos y Condiciones</string>

    <string name="title_activity_menu_adoptante">MenuAdoptanteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_nombre_usuario">Nombre de usuario</string>
    <string name="nav_header_correo">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="reg_Tipo_Usuario">Tipo Usuario</string>
    <string name="recordar">Recordar</string>
    <string name="todo">TODO</string>
    <string-array name="dlangs"> </string-array>

    <string name="item_lbl_anunciante">Anunciante</string>
    <string name="item_lbl_direccion">Dirección</string>
    <string name="item_lbl_descripcion">Descripción</string>
    <string name="item_lbl_telefono">Teléfono</string>
    <string name="item_lbl_fecha">Fecha de publicación</string>
    <string name="item_btn_ver_mas">Ver más</string>

    <string name="cerrar_btn_salir">Salir</string>

    <string name="crear_anuncio_btn_elegir">Elegir</string>
    <string name="crear_anuncio_btn_agregar">Agregar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>