<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav.CerrarSesionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="35dp"
        android:layout_marginBottom="0dp">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cerrar_txt_usuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="#BCD6E8"
                android:fontFamily="serif-monospace"
                android:hint="@string/login_txt_usuario"
                android:inputType="textEmailAddress"
                android:maxLength="60"
                android:textAlignment="center"
                android:textColor="#DDDCDC"
                android:textColorHint="#455A64" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/cerrar_txt_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="#BCD6E8"
                android:fontFamily="serif-monospace"
                android:hint="@string/login_txt_contrasenia"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textAlignment="center"
                android:textColorHint="#455A64" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/cerrar_btn_Salir"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#2586CB"
            android:text="@string/cerrar_btn_salir"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>

</FrameLayout>